--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>Appilicous</title>
   <link href="css/main.css" rel="stylesheet">
 </head>
@@ -152,7 +151,7 @@
   <script src="js/font-awesome.js"  type="text/javascript"></script>
 
   <!-- My own scripts -->
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
