--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
 
       <div class="col col--1-2 img-box lg-screen">
-
+        <img src="img/phone-in-hand.jpg" alt="">
       </div>
 
     </div>
